--- a/web_proj/static/uiuc/css/desktop.less
+++ b/web_proj/static/uiuc/css/desktop.less
@@ -4,6 +4,22 @@
 @uiuc_orange_dark: #EF8A1C;
 @uiuc_orange: #F47F24;
 
+// retina.less
+// A helper mixin for applying high-resolution background images (http://www.retinajs.com)
+
+@highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
+
+.at2x(@path, @w: auto, @h: auto) {
+  background-image: url(@path);
+  background-size: @w @h;
+  @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
+
+  @media @highdpi {
+    background-image: url("@{at2x_path}");
+    background-size: @w @h;
+  }
+}
+
 #nav {
 
     .spacescout-header {
@@ -12,11 +28,9 @@
 
             .logo {
                 height: 104px;
-                line-height: 104px;
                 width: 187px;
 
-                background-image: url('../img/IlliniSpaces-logo.png');
-                background-size: 187px 100px;
+                .at2x('../img/IlliniSpaces-logo.png', 187px, 100px);
             }
 
         }
@@ -60,12 +74,21 @@
 
                 .space-image-map-buttons {
 
+                    
+                    #carouselControl span {
+                        .at2x('../img/camera-grey.png', 24px, 24px);
+                    }
+
                     #carouselControl.active span {
-                        background-image: url('/static/img/uiuc_gallery_active.png');
+                        .at2x('../img/camera-blue.png', 24px, 24px);
+                    }
+
+                    #mapControl span {
+                        .at2x('../img/pin-grey.png', 24px, 24px);
                     }
 
                     #mapControl.active span {
-                        background-image: url('/static/img/uiuc_locate_active.png');
+                        .at2x('../img/pin-blue.png', 24px, 24px);
                     }
                 }
 
@@ -165,7 +188,7 @@
             }
 
             li.selected {
-                background: @uiuc_blue_dark url('/static/img/uiuc_list_item_selected.png') top repeat-x;
+                background: @uiuc_blue_dark url('../img/list_item_selected.png') top repeat-x;
                 color: white;
 
                 button {
