--- a/web_proj/static/uiuc/css/mobile.less
+++ b/web_proj/static/uiuc/css/mobile.less
@@ -6,6 +6,22 @@
 
 @uiuc_heart: #D46A6A;
 
+// retina.less
+// A helper mixin for applying high-resolution background images (http://www.retinajs.com)
+
+@highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
+
+.at2x(@path, @w: auto, @h: auto) {
+  background-image: url(@path);
+  background-size: @w @h;
+  @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
+
+  @media @highdpi {
+    background-image: url("@{at2x_path}");
+    background-size: @w @h;
+  }
+}
+
 body {
     background-color: white;
 }
@@ -56,8 +72,7 @@ body {
                 height: 104px; 
                 width: 187px; 
 
-                background-image: url('../img/IlliniSpaces-logo.png');
-                background-size: 187px 104px;
+		.at2x('../img/IlliniSpaces-logo.png', 187px, 100px);
             }
 
         }
@@ -256,7 +271,7 @@ div.actions {
 .space-detail-fav-unset {
 
     i {
-        color: @uiuc_blue_dark;
+        color: @uiuc_blue;
     }
 
 }
@@ -295,12 +310,20 @@ div.actions {
 
                 .space-image-map-buttons {
 
+                    #carouselControl span {
+                        .at2x('../img/camera-grey.png', 24px, 24px);
+                    }
+
                     #carouselControl.active span {
-                        background-image: url('/static/img/uiuc_gallery_active.png');
+                        .at2x('../img/camera-blue.png', 24px, 24px);
+                    }
+
+                    #mapControl span {
+                        .at2x('../img/pin-grey.png', 24px, 24px);
                     }
 
                     #mapControl.active span {
-                        background-image: url('/static/img/uiuc_locate_active.png');
+                        .at2x('../img/pin-blue.png', 24px, 24px);
                     }
                 }
 
@@ -428,7 +451,7 @@ div.actions {
 }
 
 #footer {
-    background-image: url('/static/img/IMark_26.gif');
+    .at2x('../img/IMark_26.png');
     background-position: left center;
 }
 
